--- a/game.css
+++ b/game.css
@@ -115,14 +115,19 @@ body{
     border-right: 100px solid #ff3d74;
     transform: rotate(270deg);
   }
-  .text{
+  .text {
     position: absolute;
-    top: 40%;
+    top: 50%; /* Cambiado de 40% a 50% */
+    left: 50%; /* Añadido para centrar horizontalmente */
+    transform: translate(-50%, -50%); /* Centra el texto */
     color: #fff;
     font-size: 40px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     perspective: 400;
-    code, [data-char="x"]{
-      font-size: 18px;
-    }
+    text-align: center;
   }
+  
+  code, [data-char="x"] {
+    font-size: 18px;
+  }
+  
